# BreatheBreak

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  break_reminder.py  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
breathebreak/: __init__.py  __main__.py  app.py  config.py  notifier.py  stats.py  tracker.py
tests/: test_config.py  test_stats.py  test_tracker.py
