[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "breathebreak"
version = "1.1.0"
description = "Lightweight macOS menu bar app for screen break reminders"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ahmed H Ebrahim" },
]
keywords = ["macos", "menu-bar", "health", "breaks", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "rumps>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
breathebreak = "breathebreak.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
